# cptac-prostate

./: .gitignore  ARCHITECTURE.md  PROJECT_RULES.md  context.md  pyproject.toml  tmp_pairwise_test.ini
docs/: purity_test_usage.md
notebooks/: 20260330_acetyl_TMT_pca.ipynb  20260330_pY_TMT_sample_issues.ipynb  20260330_phospho_TMT_pca.ipynb  20260330_phospho_TMT_sample_issues.ipynb  20260330_protein_TMT_sample_pca.ipynb  20260330_protein_sample_issues.ipynb  20260330_ubi_TMT_pca.ipynb
notebooks/Differential/: 20260331_Phospho_TMT_Diff.ipynb  20260401_msfragger_Global_DDA_TMT_Diff.ipynb  20260401_mspycloud_Global_DDA_tumor_vs_normal.ipynb  20260401_mspycloud_protein_TMT_GG1_2_vs_others.ipynb  20260401_mspycloud_protein_TMT_GG2_vs_normal.ipynb  20260401_mspycloud_protein_TMT_GG3_vs_normal.ipynb  20260401_mspycloud_protein_TMT_GG3_vs_others.ipynb  20260401_mspycloud_protein_TMT_GG4_vs_normal.ipynb  20260401_mspycloud_protein_TMT_GG4_vs_others.ipynb  20260402_mspycloud_protein_TMT_Diff_heatmap.ipynb
notebooks/PCA/: 20260330_pY_TMT_normalized_pca.ipynb  (+13 more)
scripts/: config_global_sample_match.ini  plot_grade_progression_pathways.py  run_all_global_diff_dia_20260407.bat
tests/: test_global_two_groups_ml.py  test_pathway_purity_validation.py  test_purity_validation.py
tmp_pairwise_out/: GG1_vs_GG2_diff.tsv  GG1_vs_GG2_sample_info.tsv  GG1_vs_GG2_summary.txt  GG1_vs_GG3_diff.tsv  GG1_vs_GG3_sample_info.tsv  GG1_vs_GG3_summary.txt  config_GG1_vs_GG2.ini  config_GG1_vs_GG3.ini  pairwise_sig_hit_matrix.tsv  pairwise_summary.tsv  pairwise_summary.txt  pairwise_top_effects.tsv
(+39 files in other folders)
